# wet-surface-glsl

./: LICENSE  README.md
src/: CMakeLists.txt  wet_surface.cpp
src/Model/: Suzanne.mtl
src/common/: objloader.cpp  objloader.hpp  vboindexer.cpp  vboindexer.hpp
src/shaders/: Standard.fs.glsl
